# IGS-BRKGA

./: LICENSE  README.md  pyproject.toml
examples/HVASP/: generate_experiments.py  hvasp.ipynb
examples/HVASP/data/: HVASP-S-01.xlsx  HVASP-S-01_cur_loc.json
examples/VRPTW/: vrptw.ipynb
src/components/: activity.py  ga_types.py  role.py  vessel.py
src/logic/: Decoder.py  scheduling_model.py
src/optimization/: _aggregator.py  igs_brkga.py
src/utils/: distance_calculator.py  helper_functions.py  load_data.py  validation.py
src/vrptw/: brkga_vrptw_ws.py  data.py  decoder.py  igs_brkga_vrptw.py
