[project]
name = "igs-brkga"
version = "0.1.0"
description = "A Biased Random-Key Genetic Algorithm (BRKGA) instantiation of the IMAP-IGS framework."
authors = [
    { name = "Lennard Timp" }
]
keywords = ["optimization", "genetic algorithm", "multi-objective", "decision-support", "constrained multi-objective optimisation problem"]
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
dependencies = [
    "cpmpy>=0.10.1",
    "loguru>=0.7.3",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pymoo>=0.6.1.6",
    "seaborn>=0.13.2",
    "searoute>=1.6.0",
    "werkzeug>=3.1.8",
]
